--- a/blogpost.html
+++ b/blogpost.html
@@ -6,9 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/estilos.css"/>
     <title>Título del post</title>
-</head>
+</head> 
 <body>
     <div id="container">
+        <div id="cabecera">
+            Cabecera
+        </div>
         <div id="post">
             <h1>Este es el título atractivo e interesante del post</h1>
             <p>Y este es el párrafo de inicio donde vamos a 
