--- a/blogpost.html
+++ b/blogpost.html
@@ -13,6 +13,9 @@
             <h1>Este es el título atractivo e interesante del post</h1>
             <p>Y este es el párrafo de inicio donde vamos a 
             explicar las cosas increíbles que se pueden hacer con las ramas</p>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+            Laboriosam earum suscipit reiciendis officiis necessitatibus dolor rerum sunt unde corrupti tenetur,
+            cum asperiores magni laborum voluptatem incidunt animi, exercitationem, distinctio accusamus.</p>
         </div>
     </div>
 </body>
