--- a/blogpost.html
+++ b/blogpost.html
@@ -11,7 +11,7 @@
     <div id="container">
         <div id="cabecera">
             Hyperblog 
-            <span id="tagline">Tu blog de confianza</span>
+            <span id="tagline">Tu blog maestro</span>
         </div>
         <div id="post">
             <h1>Este es el título atractivo e interesante del post</h1>
@@ -20,6 +20,7 @@
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.
             Laboriosam earum suscipit reiciendis officiis necessitatibus dolor rerum sunt unde corrupti tenetur,
             cum asperiores magni laborum voluptatem incidunt animi, exercitationem, distinctio accusamus.</p>
+            <p>Suscríbete y dale like</p>
         </div>
     </div>
 </body>
