--- a/blogpost.html
+++ b/blogpost.html
@@ -22,6 +22,9 @@
             cum asperiores magni laborum voluptatem incidunt animi, exercitationem, distinctio accusamus.</p>
             <p>Suscríbete y dale like</p>
         </div>
+        <div id="footer">
+            Hecho con amor en Platzi &lt;3
+        </div>
     </div>
 </body>
 </html>
