--- a/blogpost.html
+++ b/blogpost.html
@@ -16,12 +16,12 @@
         </div>
         <div id="post">
             <h1>Este es el título atractivo e interesante del post</h1>
-            <p>Y este es el párrafo de inicio donde vamos a 
+            <p>Este es el párrafo de inicio donde vamos a 
             explicar las cosas increíbles que se pueden hacer con las ramas</p>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.
             Laboriosam earum suscipit reiciendis officiis necessitatibus dolor rerum sunt unde corrupti tenetur,
             cum asperiores magni laborum voluptatem incidunt animi, exercitationem, distinctio accusamus.</p>
-            <p>Suscríbete y dale like</p>
+            <p>¡Suscríbete y dale like!</p>
         </div>
         <div id="footer">
             Hecho con amor en Platzi &lt;3
